--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Booil Jung's Thech notes
-description: 
+title: Booil's Thech notes
+description: 3D, Game, AI에 대한 이야기를 씁니다. 
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
