--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Booil's Thech notes
-description: 3D, Game, AI에 대한 이야기를 씁니다. 
+description: 소프트웨어, 3D, Game, AI 연구 개발에 대한 이야기를 씁니다. 
 show_downloads: false
 google_analytics:
-theme: jekyll-theme-cayman
+theme: jekyll-theme-cayman]
+use_math: true
