--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Booil's Thech notes
+title: Booil's Tech notes
 description: 소프트웨어, 3D, Game, AI 연구 개발에 대한 이야기를 씁니다.
 show_downloads: false
 google_analytics:
