--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Booil's Tech notes
-description: 소프트웨어, 3D, Game, AI 연구 개발에 대한 이야기를 씁니다.
+title: Booil Jung
+description: 소프트웨어, 3D, 게임, AI 연구 개발에 대한 잡담.
 show_downloads: false
 google_analytics:
 #theme: jekyll-theme-cayman
